problem solved with packages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "home": "https://manudd25.github.io/Travel-Agency-Web/",
+  "homepage": "https://manudd25.github.io/Travel-Agency-Web/",
   "name": "useeffect",
   "private": true,
   "version": "0.0.0",
